--- a/test.html
+++ b/test.html
@@ -14,5 +14,16 @@
         src="handnfoot/pcassets/png/10_of_spades.png"></span><span class="cardtable_card"><img
         src="handnfoot/pcassets/png/10_of_diamonds.png"></span>
     </span>
-</body>
+    <span class="cardtable_fan_vertical">
+        <span class="cardtable_card"><img src="handnfoot/pcassets/png/5_of_clubs.png"></span><span class="cardtable_card"><img
+            src="handnfoot/pcassets/png/5_of_spades.png"></span><span class="cardtable_card"><img
+            src="handnfoot/pcassets/png/8_of_diamonds.png"></span><span class="cardtable_card"><img
+            src="handnfoot/pcassets/png/8_of_diamonds.png"></span><span class="cardtable_card"><img
+            src="handnfoot/pcassets/png/king_of_hearts.png"></span><span class="cardtable_card"><img
+            src="handnfoot/pcassets/png/queen_of_diamonds.png"></span><span class="cardtable_card"><img
+            src="handnfoot/pcassets/png/queen_of_hearts.png"></span><span class="cardtable_card"><img
+            src="handnfoot/pcassets/png/10_of_spades.png"></span><span class="cardtable_card"><img
+            src="handnfoot/pcassets/png/10_of_diamonds.png"></span>
+        </span>
+    </body>
 </html>
